[package]
name = "toe"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
libc = "0.2"
toml = "0.5"
sysinfo = "0.26"

[dependencies.ctrlc]
version = "3.2"
features = ["termination"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
codegen-units = 1
lto = true
strip = true
